test(cartisan-ai): F05-03 使用 streamingRequest 和 getLast() 修复测试